--- a/tombola.html
+++ b/tombola.html
@@ -11,8 +11,9 @@
     <div id="cartella">
       <!-- Spazio per la cartella con i numeri -->
     </div>
-
-    <button id="estraiNumero">Guess the number</button>
+    <div id="btn">
+      <button id="estraiNumero">Guess the number</button>
+    </div>
     <div id="numeriEstratti">Guessed number:</div>
     <script src="tombola.js"></script>
   </body>
